# QReviewer

./: .dockerignore  .gitignore  AI_LEARNING_IMPLEMENTATION.md  COMPLETE_WORKFLOW_SUMMARY.md  Dockerfile  ENTRY_POINTS.md  GETTING_STARTED.md  KIRO_BACKEND_SUMMARY.md  Makefile  Makefile.qreview  PR2_ANALYSIS_SUMMARY.md  README.md  config.env.example  design.md  docker-compose.yml  github_post_urllib.py  install.sh  kiro_findings.json  kiro_pr2_analysis.py  post_kiro_review.py  post_to_github.py  pyproject.toml  qreview.py  qreview.sh  quick_test.py  requirements.txt  review_pr2_with_kiro.py  setup.py  simple_github_post.py  simple_test.py  test_github_api.py  test_kiro_backend.py  test_kiro_integration.py  train_multiple_repos.py
agents/: __init__.py  qreviewer.py
docs/: MODULE_LEARNING_README.md  WORKFLOW_README.md
learning_results/: README.md  combined_learning_results.json  direct_learning_results.json  module_ae_appian-libraries_generative-ai_results.json  module_appian-libraries_generative-ai_results.json  module_appian-libraries_results.json  module_lib_results.json  module_src_results.json  module_tests_results.json
qrev/: __init__.py  cli.py  cli_config.py  cli_learning.py  config.py  diff.py  github_api.py  github_review.py  learning.py  llm_client.py  models.py  prompts.py  q_client.py  report.py  standards.py
standards/: performance.json  python_style.json  security.json  team_specific.json
tests/: README.md  __init__.py  demo.py  demo_ai_learning_workflow.py  example-guidelines.md  test_ai_learning.py  test_ai_learning_real.py  test_api.py  test_api_comprehensive.py  test_api_demo.py  test_basic.py  test_github_post.py  test_inline_comments.py  (+7 more)
(+9 files in other folders)
